@@ -26,18 +26,19 @@ With this extension you can add product brands to your WooCommerce site.
 > * Assign brands to products
 > * Associate a banner and a link to each brand
 > * Translation-ready (English and Spanish included)
+> * Visual Composer support
+> * Minimalist design and fully responsive
+> * Very lightweight
 > * Shortcode: Display all brands
 > * Shortcode: Display brands carousel
 > * Shortcode: Display product carousel by brand
 > * Shortcode: Display brands for a specific product
-> * Visual Composer support
 > * Widget: Display brands as dropdown
 > * Widget: Display brands as list (brand names or brand logos)
 > * Widget: Filter products by brand
-> * Import brands from other brands plugins
-> * Minimalist design and fully responsive
-> * Very lightweight
 > * Customizable brands slug
+> * Show the brands in products loop
+> * Import brands (migrate) from other brands plugins
 > * Dummy data installer (logos by heroturko)
 > * And much more!
 
@@ -73,6 +74,8 @@ There are four shortcodes available:
 == Changelog ==
 = 1.5 =
 * Feature (Tool): Install dummy data (generate generic brands and assigns them to available products randomly)
+* Feature: Restrict coupon by brands
+* Feature: Get system status for better plugin support
 * Feature: Import brands from "Ultimate WooCommerce Brands"
 * Dev: 'pwb_before_single_product_brands' and 'pwb_after_single_product_brands' hooks added
 * Dev: Basic WordPress REST API support
